compiler/testData/diagnostics/tests/callableReference/kt34314.kt
// !DIAGNOSTICS: -UNUSED_VARIABLE

fun main() {
    konst x = <!NEW_INFERENCE_NO_INFORMATION_FOR_PARAMETER!>run<!> { <!NEW_INFERENCE_NO_INFORMATION_FOR_PARAMETER!>::run<!> } // no error
}
